--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,9 @@
 
+
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made with ❤️ by The App Brewery</p>
+    <p>Made with ❤️ by Anmol Pal</p>
   </div>
 </div>
 </body>
