--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 <% for (var i=0; i<posts.length; i++) { %>
   <h1><%=posts[i].title%></h1>
   <p>
-   <%=posts[i].content%>
+   <%=posts[i].content.substring(0, 100) + "..."%>
   </p>
   <% } %>
 
